@@ -41,7 +41,7 @@ Item Magnet (and corresponding buff) that
 * Buff decides if it gives you a corresponding buff icon to show the status of the magnet
 * Held decides if the magnet works only when held
 * "Activate On Enter" decides if magnet should be automatically activated when entering the world
-* Filter function: Presets (hearts, mana stars, coins, pickup effects), blacklist/whitelist
+* Filter function: Presets (hearts, mana stars, coins, pickup effects), blacklist/whitelist. Presets override black/whitelist
 * Magnet stats are limited to sensible values (Range only goes up to about three screens in any direction)
 * If you increase velocity or acceleration too much from those recommended above, items might get "stuck" on you until you deactivate it again
 * Beware of lag when increasing these values, especially range
